--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM registry.eu-gb.bluemix.net/ibmliberty
-COPY target/server.xml /opt/ibm/wlp/usr/servers/defaultServer/
+COPY server.xml /opt/ibm/wlp/usr/servers/defaultServer/
 ADD target/bluebox.war /opt/ibm/wlp/usr/servers/defaultServer/dropins/
 ENV LICENSE accept
