Add server.xml for container deployment

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,7 @@
 										<directory>${project.basedir}/src/main/docker</directory>
 										<includes>
 											<include>Dockerfile</include>
+											<include>server.xml</include>
 										</includes>
 									</resource>
 								</resources>
