--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,4 +1,5 @@
-FROM registry.eu-gb.bluemix.net/ibmliberty:latest
+FROM registry.eu-gb.bluemix.net/ibmliberty
 COPY server.xml /opt/ibm/wlp/usr/servers/defaultServer/
 ADD bluebox.war /opt/ibm/wlp/usr/servers/defaultServer/dropins/
 ENV LICENSE accept
+RUN /opt/ibm/wlp/bin/server start defaultServer
