--- a/src/main/resources/bluebox.properties
+++ b/src/main/resources/bluebox.properties
@@ -1,5 +1,5 @@
 # Bluebox version
-bluebox_version=4.5.4
+bluebox_version=4.5.6
 
 bluebox.custom_properties=${sys:server.config.dir}/bluebox
 
@@ -60,5 +60,7 @@ dojo_base=//ajax.googleapis.com/ajax/libs/dojo/1.10.4
 
 bluebox_theme=clean
 
-# links to online war file
-online_war=https://github.com/stephen-kruger/bluebox
+# display a profile for support
+bluebox_helpname=Stephen Kruger
+bluebox_helpmail=support@bluebox.com
+bluebox_helpphoto=https://avatars0.githubusercontent.com/u/7523054?v=3&s=460
