Fixed defect in config over-ride

--- a/src/main/resources/bluebox.properties
+++ b/src/main/resources/bluebox.properties
@@ -1,7 +1,7 @@
 # Bluebox version
 bluebox_version=4.5.6
 
-bluebox.custom_properties=${sys:server.config.dir}/bluebox
+bluebox.custom_properties=${sys:server.config.dir}bluebox.properties
 
 # SMTP server port
 bluebox_port=2500
