--- a/src/main/resources/info.properties
+++ b/src/main/resources/info.properties
@@ -4,6 +4,7 @@ toblacklist=Recipient black-list
 fromblacklist=Sender blacklist
 towhitelist=Recipient white-list
 fromwhitelist=Sender white-list
+smtpport=SMTP port
 messageage=Hours to keep messages
 messagemax=Limit total message count to
 messagemaxsize=Maximum message size(MB)
