--- a/src/main/resources/info.properties
+++ b/src/main/resources/info.properties
@@ -5,6 +5,7 @@ fromblacklist=Sender blacklist
 towhitelist=Recipient white-list
 fromwhitelist=Sender white-list
 smtpport=SMTP port
+storageimpl=Storage implementation
 messageage=Hours to keep messages
 messagemax=Limit total message count to
 messagemaxsize=Maximum message size(MB)
