Added mongodo support

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,4 +1,15 @@
-FROM registry.eu-gb.bluemix.net/ibmliberty
+# Build and install MongoDB
+FROM centos:centos7
+MAINTAINER The CentOS Project <cloud-ops@centos.org>
+RUN yum -y update; yum clean all
+RUN yum -y install epel-release; yum clean all
+RUN yum -y install mongodb-server; yum clean all
+RUN mkdir -p /data/db
+EXPOSE 27017
+ENTRYPOINT ["/usr/bin/mongod"]
+
+#FROM registry.eu-gb.bluemix.net/ibmliberty
+FROM registry.ng.bluemix.net/ibmliberty
 COPY server.xml /opt/ibm/wlp/usr/servers/defaultServer/
 ADD bluebox.war /opt/ibm/wlp/usr/servers/defaultServer/apps/
 ENV LICENSE accept
