Added new jar utils functions More H2 code New ws to start/stop smtp server

--- a/src/main/resources/admin.properties
+++ b/src/main/resources/admin.properties
@@ -9,6 +9,8 @@ expire_action=Delete expired emails
 set_global_action=Set global mailcount
 rebuild_search_action=Rebuild search indexes
 db_maintenance_action=Perform db maintenance
+start_smtp_action=Start the smtp server
+stop_smtp_action=Stop the smtp server
 backup_action=Backup mail to disk
 restore_action=Restore mail from backup
 clear_backup_action=Clean backups
