Upgraded Dojo Admin rework

--- a/src/main/resources/bluebox.properties
+++ b/src/main/resources/bluebox.properties
@@ -57,7 +57,8 @@ bluebox_daemon_delay=60
 
 # Dojo settings
 dojo_style=claro
-dojo_base=//ajax.googleapis.com/ajax/libs/dojo/1.10.4
+dojo_base=//ajax.googleapis.com/ajax/libs/dojo/1.11.2
+#dojo_base=//ajax.googleapis.com/ajax/libs/dojo/1.10.4
 
 bluebox_theme=clean
 
