--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
 		<jsoup_version>1.9.2</jsoup_version>
 		<commons_io_version>2.5</commons_io_version>
 		<rome_version>1.7.0</rome_version>
-		<lucene_version>6.2.0</lucene_version>
-		<solr_version>6.2.0</solr_version>
+		<lucene_version>6.2.1</lucene_version>
+		<solr_version>6.2.1</solr_version>
 		<derby_version>10.12.1.1</derby_version>
 		<mongo_version>3.3.0</mongo_version>
 		<apache.wink>1.4</apache.wink>
@@ -52,6 +52,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.5.1</version>
 					<configuration>
 						<source>1.8</source>
 						<target>1.8</target>
@@ -122,7 +123,7 @@
 					</executions>
 				</plugin>
 				<!-- This plug creates the executable jar for fixing systems. Run it 
-					using :clean compile assembly:single -->
+					using :clean compile assembly:single 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
@@ -145,15 +146,9 @@
 						</execution>
 					</executions>
 				</plugin>
+				-->
 			</plugins>
 		</pluginManagement>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
-			</plugin>
-		</plugins>
 	</build>
 	<dependencies>
 		<dependency>
@@ -304,7 +299,7 @@
 		<dependency>
 			<groupId>javax.annotation</groupId>
 			<artifactId>javax.annotation-api</artifactId>
-			<version>1.2</version>
+			<version>1.3</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -366,6 +361,11 @@
 			<version>1.4.192</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.2</version>
+		</dependency>
 	</dependencies>
 	<scm>
 		<url>https://github.com/stephen-kruger/bluebox.git</url>
