--- a/src/main/resources/bluebox.properties
+++ b/src/main/resources/bluebox.properties
@@ -63,5 +63,6 @@ bluebox_theme=clean
 
 # display a profile for support
 bluebox_helpname=Stephen Kruger
-bluebox_helpmail=support@bluebox.lotus.com
+#bluebox_helplink=mailto:support@bluebox.lotus.com
+bluebox_helplink=https://github.com/stephen-kruger/bluebox/issues
 bluebox_helpphoto=https://avatars0.githubusercontent.com/u/7523054?v=3&s=460
