--- a/src/main/resources/bluebox.properties
+++ b/src/main/resources/bluebox.properties
@@ -8,8 +8,8 @@ bluebox_port=25
 
 # Storage implementation
 #bluebox_storage=com.bluebox.smtp.storage.mongodb.MongoImpl
-#bluebox_storage=com.bluebox.smtp.storage.derby.StorageImpl
-#bluebox_storage=com.bluebox.smtp.storage.h2.StorageImpl
+#bluebox_storage=com.bluebox.smtp.storage.derby.DerbyImpl
+#bluebox_storage=com.bluebox.smtp.storage.h2.H2Impl
 bluebox_storage_home=${user.home}/bluebox
 bluebox_storage_config=repository-derby.xml
 bluebox_storage_host=localhost
