--- a/src/main/resources/bluebox.properties
+++ b/src/main/resources/bluebox.properties
@@ -1,5 +1,5 @@
 # Bluebox version
-bluebox_version=4.5.15
+bluebox_version=4.5.16
 
 bluebox.custom_properties=${sys:server.config.dir}bluebox.properties
 
@@ -25,10 +25,10 @@ bluebox_mail_limit=100000000
 bluebox_maxconnections=500
 
 # and mails send by the following smtp servers will be rejected, comma separated list
-bluebox_smtp_blacklist=wallstreetads.org,193.104.41.200
+bluebox_smtp_blacklist=66.199.250.226,193.106.30.42,bronxnewsletter.com,wallstreetads.org,104.43.228.63,112.74.113.6,wallstreetads.org,193.104.41.200
 
 # and mails send by the following domains will be rejected, comma separated list
-bluebox_from_blacklist=blackdomain.com,wallstreetads.org
+bluebox_from_blacklist=66.199.250.226,193.106.30.42,bronxnewsletter.com,wallstreetads.org,104.43.228.63,112.74.113.6,blackdomain.com,wallstreetads.org
 
 # any mails with recipient ending in these domains will be rejected, comma separated list
 bluebox_to_blacklist=blackdomain.com,wallstreetads.org
@@ -57,7 +57,7 @@ bluebox_daemon_delay=60
 
 # Dojo settings
 dojo_style=claro
-dojo_base=//ajax.googleapis.com/ajax/libs/dojo/1.11.2
+dojo_base=//ajax.googleapis.com/ajax/libs/dojo/1.12.1
 
 bluebox_theme=clean
 
