--- a/pom.xml
+++ b/pom.xml
@@ -10,28 +10,28 @@
 	<url>https://github.com/stephen-kruger/bluebox</url>
 	<properties>
 		<subethasmtp_version>3.1.7</subethasmtp_version>
-		<slf4j_version>1.7.30</slf4j_version>
+		<slf4j_version>2.0.0-alpha1</slf4j_version>
 		<jsoup_version>1.13.1</jsoup_version>
-		<commons_io_version>2.6</commons_io_version>
-		<rome_version>1.12.2</rome_version>
-		<lucene_version>8.5.0</lucene_version>
-		<solr_version>8.5.0</solr_version>
-		<mongo_version>3.12.3</mongo_version>
+		<commons_io_version>2.10.0</commons_io_version>
+		<rome_version>1.15.0</rome_version>
+		<lucene_version>8.9.0</lucene_version>
+		<solr_version>8.9.0</solr_version>
+		<mongo_version>3.12.8</mongo_version>
 		<apache_wink>1.4</apache_wink>
-		<jetty_version>9.4.27.v20200227</jetty_version>
-		<apache_httpclient>4.5.12</apache_httpclient>
+		<jetty_version>11.0.5</jetty_version>
+		<apache_httpclient>4.5.13</apache_httpclient>
 		<h2_database>1.4.200</h2_database>
 		<javax_mail>1.6.2</javax_mail>
-		<commons_codec>1.14</commons_codec>
-		<antisamy_version>1.5.9</antisamy_version>
+		<commons_codec>1.15</commons_codec>
+		<antisamy_version>1.6.3</antisamy_version>
 		<commons_config>1.10</commons_config>
 		<commons_lang>2.6</commons_lang>
 		<file_upload>1.4</file_upload>
-		<junit_version>4.13</junit_version>
+		<junit_version>4.13.2</junit_version>
 		<codehaus_jettison>1.4.1</codehaus_jettison>
 		<sun_javax_mail>1.6.2</sun_javax_mail>
 		<javaee_version>7.0</javaee_version>
-		<javax_ws_rs_api>2.0</javax_ws_rs_api>
+		<javax_ws_rs_api>2.1.1</javax_ws_rs_api>
 		<annotation_version>1.3.2</annotation_version>
 		<servlet_api_version>4.0.1</servlet_api_version>
 	</properties>
@@ -148,6 +148,12 @@
 		</pluginManagement>
 	</build>
 	<dependencies>
+		<dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>javax.servlet-api</artifactId>
+	    <version>3.0.1</version>
+	    <scope>test</scope>
+	</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
