--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.bluebox</groupId>
 	<artifactId>bluebox</artifactId>
 	<packaging>war</packaging>
-	<version>4.7.0</version>
+	<version>4.7.1</version>
 	<name>bluebox</name>
 	<url>https://github.com/stephen-kruger/bluebox</url>
 
@@ -31,7 +31,9 @@
 		<file_upload>1.4</file_upload>
 		<junit_version>4.13.2</junit_version>
 		<codehaus_jettison>1.4.1</codehaus_jettison>
-		<sun_javax_mail>1.6.2</sun_javax_mail>
+		<!--
+		<sun_javax_mail>1.4.4</sun_javax_mail>
+		-->
 		<javaee_version>7.0</javaee_version>
 		<javax_ws_rs_api>2.1.1</javax_ws_rs_api>
 		<annotation_version>1.3.2</annotation_version>
@@ -63,10 +65,10 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.6.0</version>
+					<version>3.8.1</version>
 					<configuration>
-						<source>16</source>
-						<target>16</target>
+						<source>1.8</source>
+						<target>1.8</target>
 						<encoding>Cp1252</encoding>
 					</configuration>
 				</plugin>
@@ -209,12 +211,21 @@
 			<groupId>javax.mail</groupId>
 			<artifactId>javax.mail-api</artifactId>
 			<version>${javax_mail}</version>
+			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+			<scope>compile</scope>
+		</dependency>
+		<!--
 		<dependency>
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
 			<version>${sun_javax_mail}</version>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
